251113	0.2.0 -- Published to NPM
	Published the project to NPM under the name formul8 (previously
	known as form_factor).
	Added test.html as an example.
	Made it so that when a legend is taken as an identifier the name is
	first lowercased.
251113	0.1.3 -- Better handling of unidentifiable elements
	More descriptive console.warn message in fallback_id, and fallback_id
	now assigns the identifier it comes up with to the unidentifiable
	element it is identifying.
251112	0.1.2 -- More options
	Added an option to override the default events, and moved debounce
	into the option object as well.
	Also updated the logic to recognize textareas and selects as input-ish.
251112	0.1.1 -- README stuff
	Bare minimum README.
251112	0.1.0 -- Initial push
	Configured github source control and all that jazz.
251112	0.0.4 -- Documentation and formatting
	I finally gave in and wrote a single blessed comment.
	Also whitespace, I didn't have of that before this point.
251112	0.0.3 -- TypeScript
	Converted to TypeScript for the generated declaration file.
251112	0.0.2 -- Custom events and debouncing
	Added a custom event that fires when the value obj updates, and
	a debounce system to prevent that from happening all the time.
251111	0.0.1 -- Checkbox exceptions
	Now handles checkboxes differently than other inputs.
251111	0.0.0 -- Initial draft
	Start of project; some thrown-together recursive functions.
	Base functionality implemented.