@@ -1,3 +1,7 @@
+export declare enum update_dir {
+    from_form = 1,
+    to_form = 2
+}
 /**
  * Builds a JSON object from the given form, where each form input is a key in
  * the object (fieldsets make sub-objects).  The values of the object are
@@ -6,7 +10,8 @@
  * @param form The form in question, either the HTMLElement or the ID.
  * @param options Debounce is the amount of time in milliseconds after a change
  * when the value object should be updated; Events are the events for which the
- * value object should update.
+ * value object should update; Direction is which direction(s) the form should
+ * be updated.
  * @returns The value object that is updated each change, and the name of the
  * event that fires on those updates.  Null and null if the given form doesn't
  * exist.
@@ -14,8 +19,11 @@
 export declare const formul8: (form: HTMLFormElement | string, options?: {
     debounce: number;
     events: string[];
+    direction: update_dir;
+    auto_notify: boolean;
 }) => (string | ValueColl)[];
 type ValueColl = {
     [key: string]: any;
 };
+export declare const notify: (event_name: string, values: ValueColl) => void;
 export {};
