@@ -1,6 +1,6 @@
 {
   "name": "formul8",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Automatic form handling",
   "license": "MIT",
   "author": "C Wiebe <ctwiebe23@gmail.com>",
